# spade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements-lock.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md
examples/: basic_usage.py
scripts/: benchmark.py  synthetic_corpus.py  train_priors.py
src/spade/: __init__.py  __main__.py  api.py  cli.py  engine.py  engine_bayes.py  exceptions.py  logging_config.py  report.py  scale.py
src/spade/acceleration/: __init__.py  backend.py  cupy_ops.py
src/spade/aggregation/: __init__.py  belief_propagation.py  heatmap.py  hough.py  localize.py  peaks.py
src/spade/bench/: __init__.py  baselines.py  metrics.py  runner.py  synthetic.py
src/spade/descriptors/: __init__.py  bayesian.py  core.py  learned.py  persistence.py  zernike.py
src/spade/extraction/: __init__.py  patches.py  pyramid.py
src/spade/priors/: __init__.py  natural.py  normalize.py
src/spade/search/: __init__.py  distributed.py  index.py  lsh.py
src/spade/verification/: __init__.py  affine.py  bayes_factor.py  coherence.py  probability.py  rg_trajectory.py
tests/: __init__.py  test_bench.py  test_cli.py  test_coherence.py  test_descriptors.py  test_distributed.py  test_errors.py  test_extraction.py  test_integration.py  test_localize.py  test_pyramid.py  test_report.py  test_scale.py  test_verification.py
