[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spade-forensics"
version = "0.2.0"
description = "Sub-Patch Analysis & Detection Engine - Image forensics for tiny fragment detection"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "SPADE Contributors"}
]
keywords = [
    "image-forensics",
    "fragment-detection",
    "photometric-invariance",
    "computer-vision",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pillow>=8.0.0",
    "scikit-learn>=0.24.0",
    "faiss-cpu>=1.7.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "ruff>=0.1.0",
]
api = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-multipart>=0.0.5",
]
lsh = [
    "datasketch>=1.5.0",
]
# Phase 3: GPU acceleration
gpu = [
    "cupy-cuda12x>=12.0.0",
]
# Phase 3: Learned descriptors
learned = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
# Phase 3: Distributed search
distributed = [
    "requests>=2.28.0",
]
# Phase 3: All new features
phase3 = [
    "cupy-cuda12x>=12.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "requests>=2.28.0",
]
# Everything including Phase 3
full = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-multipart>=0.0.5",
    "datasketch>=1.5.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "requests>=2.28.0",
]

[project.scripts]
spade = "spade.cli:main"

[project.urls]
# TODO: Update these URLs with your GitHub username before publishing to PyPI
# Temporary: using spade-forensics as placeholder
Homepage = "https://github.com/spade-forensics/spade"
Documentation = "https://spade-forensics.github.io/spade"
Repository = "https://github.com/spade-forensics/spade"
Issues = "https://github.com/spade-forensics/spade/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:.*importlib.*",
    "ignore::DeprecationWarning:.*SwigPy.*",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
